# rofi_semantic

./: .gitignore  README.md  pyproject.toml
rofi_semantic/: app_information.py  constants.py  constants_sample.py  db_interface.py  rofi_interface.py  scripts.py  semantic.py  semantic_transformer.py
rofi_semantic/classes/: entry.py
rofi_semantic/models/: quantization.py  semantic.py
