[tool.poetry]
name = "rofi-semantic"
version = "0.1.0"
description = ""
authors = ["vilmarzti <villavicencio.martin@protonmail.com>"]
readme = "README.md"
packages = [{include = "rofi_semantic"}]

[tool.poetry.dependencies]
python = "^3.10"
huggingface = "^0.0.1"
sentence-transformers = "^2.2.2"
debugpy = "^1.6.6"
numpy = "^1.24.2"
sklearn = "^0.0.post1"
ripgrepy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pyflakes = "^3.0.1"
python-language-server = "^0.36.2"
pynvim = "^0.4.3"
doq = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
